remove transparant header from category and sinlge; position fixed wpadmin bar on mobile; remove console log from trans-header.js; invert transheader opacity default off->on

--- a/sass/_type.scss
+++ b/sass/_type.scss
@@ -23,6 +23,7 @@ html.admin-bar-showing {
 	}
 
 	#wpadminbar {
+		position: fixed;
 		// don't hide admin bar
 		// display: none !important;
 	}
